--- a/index.html
+++ b/index.html
@@ -614,16 +614,20 @@ margin-left: -65px;
         
         <div class="categories">
             <button class="category-btn active" data-category="electronics">
-                <i class="fas fa-laptop"></i> Jars & Microwave
+                <i class="fas fa-microwave"></i>
+ Jars & Microwave
             </button>
             <button class="category-btn" data-category="clothing">
-                <i class="fas fa-tshirt"></i> Glasses
+                <i class="fas fa-glass-martini"></i>
+ Glasses
             </button>
             <button class="category-btn" data-category="home">
-                <i class="fas fa-home"></i> Trayers & HouseHold
+                <i class="fas fa-home"></i>
+ Trayers & HouseHold
             </button>
             <button class="category-btn" data-category="sports">
-                <i class="fas fa-football-ball"></i> Kettle & Vacuum
+                <i class="fas fa-vacuum"></i>
+ Kettle & Vacuum
             </button>
         </div>
         
