--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@ margin-left: -65px;
         
         <div class="categories">
             <button class="category-btn active" data-category="electronics">
-             <i class="fas fa-jar"></i>
+             <i class="fas fa-microwave"></i>
  Jars & Microwave
             </button>
             <button class="category-btn" data-category="clothing">
@@ -626,7 +626,7 @@ margin-left: -65px;
  Trayers & HouseHold
             </button>
             <button class="category-btn" data-category="sports">
-                <i class="fas fa-vacuum"></i>
+                <i class="fas fa-kettle"></i>
  Kettle & Vacuum
             </button>
         </div>
