--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@ margin-left: -65px;
  Trayers & HouseHold
             </button>
             <button class="category-btn" data-category="sports">
-                <i class="fas fa-kettle"></i>
+             <i class="fas fa-broom"></i>
  Kettle & Vacuum
             </button>
         </div>
