--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@ margin-left: -65px;
         
         <div class="categories">
             <button class="category-btn active" data-category="electronics">
-             <i class="fas fa-microwave"></i>
+            <i class="fas fa-blender"></i>
  Jars & Microwave
             </button>
             <button class="category-btn" data-category="clothing">
