--- a/arabic.html
+++ b/arabic.html
@@ -652,16 +652,16 @@ margin-left: -65px;
         
         <div class="categories">
             <button class="category-btn active" data-category="electronics">
-                <i class="fas fa-laptop"></i> البرطمانات والميكروويف
+                <i class="fas fa-blender"></i> البرطمانات والميكروويف
             </button>
             <button class="category-btn" data-category="clothing">
-                <i class="fas fa-tshirt"></i> زجاج
+               <i class="fas fa-glass-martini"></i> زجاج
             </button>
             <button class="category-btn" data-category="home">
-                <i class="fas fa-home"></i> صواني وأدوات منزلية
+               <i class="fas fa-home"></i> صواني وأدوات منزلية
             </button>
             <button class="category-btn" data-category="sports">
-                <i class="fas fa-football-ball"></i> غلاية ومكنسة كهربائية
+                 <i class="fas fa-broom"></i> غلاية ومكنسة كهربائية
             </button>
         </div>
         
