--- a/turkish.html
+++ b/turkish.html
@@ -614,16 +614,16 @@ margin-left: -65px;
         
         <div class="categories">
             <button class="category-btn active" data-category="electronics">
-                <i class="fas fa-laptop"></i> Kavanozlar ve Mikrodalga
+               <i class="fas fa-blender"></i> Kavanozlar ve Mikrodalga
             </button>
             <button class="category-btn" data-category="clothing">
-                <i class="fas fa-tshirt"></i> Gözlük
+                <i class="fas fa-glass-martini"></i> Bardak
             </button>
             <button class="category-btn" data-category="home">
                 <i class="fas fa-home"></i> Tepsiler ve Ev Eşyaları
             </button>
             <button class="category-btn" data-category="sports">
-                <i class="fas fa-football-ball"></i> Su Isıtıcısı ve Vakum
+                <i class="fas fa-broom"></i> Su Isıtıcısı ve Vakum
             </button>
         </div>
         
