--- a/turkish.html
+++ b/turkish.html
@@ -746,7 +746,7 @@ margin-left: -65px;
             
             </div>
             <p class="copyright">&copy; <span id="current-year">2025</span>  <a href="https://www.instagram.com/jk_developer.it?igsh=NzUyNzdzNWo5Y2F0" target="_blank"><span class="fotername">JK_developer.it</span></a> All rights reserved. </p>
-            <p class="developer">Developed by <a href="https://www.instagram.com/jk_developer.it?igsh=NzUyNzdzNWo5Y2F0" target="_blank"><span class="fotername">Nihat Qader</span> </a></p>
+            <p class="developer">Developed by <a href="https://www.instagram.com/jk_developer.it?igsh=NzUyNzdzNWo5Y2F0" target="_blank"><span class="fotername">JK_developer.it</span> </a></p>
         </div>
         </div>
     </footer>
